@@ -29,14 +29,13 @@ class AstCreateTableBuilderIntegrationTest {
         // Given
         String sql = """
             CREATE TABLE usuarios (
-                id INT PRIMARY KEY,
+                id INT PRIMARY KEY AUTO_INCREMENT,
                 nome VARCHAR(100) NOT NULL,
-                email VARCHAR(255)  NOT NULL,
+                email VARCHAR(255)  NOT NULL UNIQUE,
                 senha VARCHAR(255) NOT NULL,
                 ativo BOOLEAN DEFAULT TRUE
             )
             """;
-        // AUTO_INCREMENT, UNIQUE
         // data_criacao TIMESTAMP DEFAULT -> Erro
         // CURRENT_TIMESTAMP (futuramente usada na tabela acima)
 
@@ -47,7 +46,7 @@ class AstCreateTableBuilderIntegrationTest {
 
         // Then
         assertThat(statement.tableName().getName()).isEqualTo("usuarios");
-        assertThat(statement.columns()).hasSize(6);
+        assertThat(statement.columns()).hasSize(5);
 
         // Verifica primeira coluna (id)
         assertThat(statement.columns().getFirst())
@@ -97,7 +96,7 @@ class AstCreateTableBuilderIntegrationTest {
         // Then
         assertThat(statement.tableName().getName()).isEqualTo("teste");
         assertThat(statement.columns()).hasSize(1);
-        assertThat(statement.columns().get(0).getColumnName()).isEqualTo("id");
+        assertThat(statement.columns().getFirst().getColumnName()).isEqualTo("id");
     }
 
     @ParameterizedTest
@@ -120,6 +119,7 @@ class AstCreateTableBuilderIntegrationTest {
     }
 
     // Unknown data type: dbturtleparserastntmColumnDef3b8ee898 -> erro de mapeamento de coluna (colunas de tipos)
+    // Nó está vindo null
     @Test
     @DisplayName("Deve gerar SQL válido que pode ser re-parseado")
     void shouldGenerateReparseableSql() {
